# HaNNA

./: .gitignore  CmakeLists.txt  README.md
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt  conv2d.cpp  conv2d_generator.cpp  conv2d_gpu  kernel.cpp  kernel.hpp  kernel_generator.h
src/kernel/conv2d/: CMakeLists.txt  clock.h  conv2d.cpp
src/kernel/depth_separable_conv2d/: CMakeLists.txt  depth_separable_conv2d.cpp
src/kernels/: CMakeLists.txt  conv2d_CHWN_gpu.cpp  conv2d_gpu.cpp  conv2d_gpu_tf.py  depthwise_conv2d_gpu.cpp  depthwise_sep_CHWN_gpu.cpp  depthwise_tf.py  maxpool_gpu.cpp  relu_gpu.cpp  relu_tf.py  test.py
src/nsightDemo/: CMakeLists.txt  blur.cpp  blur_x.cpp
src/resnet_50/: CMakeLists.txt  load_weights.py  process.cpp  resnet_50_generator.cpp  validate_resnet50_output.py
src/resnet_50/outputs/: halide_output.data
src/vgg/: vgg16.cpp
